mytomorrow_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytomorrow-web
  labels:
    app: mytomorrow-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mytomorrow-web
      role: mytomorrow-web
      tier: backend
  template:
    metadata:
      labels:
        app: mytomorrow-web
        role: mytomorrow-web
        tier: backend
    spec:
      containers:
      - name: mytomorrows-web
        image: 162338488681.dkr.ecr.eu-west-1.amazonaws.com/mytomorrows
        imagePullPolicy: Always
        resources:
            requests:
              memory: "512Mi"  # Minimum memory required
              cpu: "500m"      # Minimum CPU required (500 millicores)
            limits:
              memory: "1Gi"    # Maximum memory allowed
              cpu: "1"         # Maximum CPU allowed (1 core)
