mytomorrows_k8s_network.yml
apiVersion: v1
kind: Service
metadata:
  #namespace: mytomorrows
  name: mytomorrows-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: mytomorrows_app

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  #namespace: mytomorrows
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: eks.amazonaws.com/alb

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #namespace: mytomorrows
  name: ingress-mytomorrows
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mytomorrows-service
                port:
                  number: 5000
